# django-react

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.template  Dockerfile  manage.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/blog/: apps.py  models.py  paginators.py  serializers.py  urls.py  views.py
backend/apps/user/: apps.py  models.py
backend/core/: urls.py  wsgi.py
backend/core/config/: base.py
backend/scripts/: docker-entrypoint-worker.sh  docker-entrypoint.sh
frontend/: index.html  package-lock.json
frontend/src/: app.jsx
web/: .env.template  Dockerfile
web/apps/auth/: backends.py  views.py
web/apps/user/: admin.py  urls.py  user_manager.py  views.py
web/core/: asgi.py
web/core/config/: base.py
